--- a/Changes
+++ b/Changes
@@ -1,2 +1,6 @@
+0.05
+    - Depend on a more recent IO (binmode method is missing in older ones)
+    - Refactor JSON handling and move to KiokuDB core
+
 0.04
     - update test suite to not use KiokuDB::Resolver
